// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emptySpace > should work with border 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 71.25rem;
  margin: 0 auto;
  padding: 0 8.75rem;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-2 {
  padding: 2.5rem;
}

.emotion-4 {
  text-align: center;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1.5rem_xxsmall__toi52uj styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <p
              class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
          />
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with image 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 71.25rem;
  margin: 0 auto;
  padding: 0 8.75rem;
}

.emotion-2 {
  padding: 2.5rem;
}

.emotion-4 {
  width: 15rem;
  height: 15rem;
  object-fit: contain;
}

.emotion-6 {
  text-align: center;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1.5rem_xxsmall__toi52uj styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <img
            alt=""
            class="emotion-4 emotion-5"
            size="15"
            src="/src/components/EmptyState/__stories__/illustrations/kapsule.webp"
          />
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <p
              class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
          />
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with image as component 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 71.25rem;
  margin: 0 auto;
  padding: 0 8.75rem;
}

.emotion-2 {
  padding: 2.5rem;
}

.emotion-4 {
  text-align: center;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1.5rem_xxsmall__toi52uj styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <img
            alt="kapsule logo"
            src="/src/components/EmptyState/__stories__/illustrations/kapsule.webp"
          />
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <p
              class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
          />
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with learn more 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 71.25rem;
  margin: 0 auto;
  padding: 0 8.75rem;
}

.emotion-2 {
  padding: 2.5rem;
}

.emotion-4 {
  text-align: center;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1.5rem_xxsmall__toi52uj styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <p
              class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
          />
          <a
            class="styles__1dtqm9e0 styles_prominence_default__1dtqm9e3 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodyStrong__1dtqm9eb styles_type_standalone__1dtqm9ed styles_undefined_compound_4__1dtqm9ei styles__1dtqm9en"
            data-variant="standalone"
            href="https://scaleway.com"
          >
            Learn more
            <svg
              class="styles__1dtqm9ep styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </a>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with primary button 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 71.25rem;
  margin: 0 auto;
  padding: 0 8.75rem;
}

.emotion-2 {
  padding: 2.5rem;
}

.emotion-4 {
  text-align: center;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1.5rem_xxsmall__toi52uj styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <p
              class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <button
              type="button"
            >
              Test
            </button>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with secondary button 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 71.25rem;
  margin: 0 auto;
  padding: 0 8.75rem;
}

.emotion-2 {
  padding: 2.5rem;
}

.emotion-4 {
  text-align: center;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1.5rem_xxsmall__toi52uj styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <p
              class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <button
              type="button"
            >
              Test
            </button>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with size 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 45rem;
  margin: 0 auto;
}

.emotion-2 {
  padding: 2.5rem;
}

.emotion-4 {
  text-align: center;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <p
              class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
          />
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with title 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 71.25rem;
  margin: 0 auto;
  padding: 0 8.75rem;
}

.emotion-2 {
  padding: 2.5rem;
}

.emotion-4 {
  text-align: center;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1.5rem_xxsmall__toi52uj styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <h2
              class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_strong__m4c9owj style_variant_headingSmall__m4c9ow15 style_disabled_false__m4c9ow1b style_undefined_compound_73__m4c9ow3d"
            >
              test
            </h2>
            <p
              class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
          />
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work without parameters 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 71.25rem;
  margin: 0 auto;
  padding: 0 8.75rem;
}

.emotion-2 {
  padding: 2.5rem;
}

.emotion-4 {
  text-align: center;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1.5rem_xxsmall__toi52uj styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <p
              class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
